--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,11 @@ header {
   align-items: stretch;
   justify-content: space-between;
 }
+@media screen and (min-width: 786px) {
+  header {
+    height: 75vh;
+  }
+}
 
 nav {
   display: flex;
