--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -76,6 +76,11 @@ nav {
     font-size: 1rem;
     width: auto;
   }
+  @include mixins.laptop() {
+    padding: 40px;
+    gap: 50px;
+    font-size: 1.4rem;
+  }
 }
 
 .navLinks a {
