--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -9,10 +9,17 @@ footer {
   height: 80vh;
   background-color: #303841;
   font-size: 1.2rem;
+  @include mixins.laptop() {
+    height: 50vh;
+    font-size: 1.6rem;
+  }
 
   .fas {
     color: white;
     font-size: 1.6rem;
+    @include mixins.laptop() {
+      font-size: 2rem;
+    }
   }
   .contactText {
     box-sizing: border-box;
@@ -34,6 +41,9 @@ footer {
     }
     .fab {
       font-size: 1.8rem;
+      @include mixins.laptop() {
+        font-size: 2.2rem;
+      }
     }
   }
 }
