--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -9,6 +9,10 @@ footer {
   height: 80vh;
   background-color: #303841;
   font-size: 1.2rem;
+  @include mixins.ipad() {
+    height: 40vh;
+    font-size: 1.4rem;
+  }
   @include mixins.laptop() {
     height: 50vh;
     font-size: 1.6rem;
@@ -17,6 +21,9 @@ footer {
   .fas {
     color: white;
     font-size: 1.6rem;
+    @include mixins.ipad() {
+      font-size: 1.8rem;
+    }
     @include mixins.laptop() {
       font-size: 2rem;
     }
@@ -41,6 +48,9 @@ footer {
     }
     .fab {
       font-size: 1.8rem;
+      @include mixins.ipad() {
+        font-size: 2rem;
+      }
       @include mixins.laptop() {
         font-size: 2.2rem;
       }
