--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,11 @@ header {
     height: 60vh;
   }
 }
+@media screen and (min-width: 1200px) {
+  header {
+    height: 90vh;
+  }
+}
 
 nav {
   display: flex;
@@ -100,11 +105,22 @@ nav {
     font-size: 1.4rem;
   }
 }
+@media screen and (min-width: 1200px) {
+  .navLinks {
+    padding: 45px;
+    gap: 60px;
+  }
+}
 
 .navLinks a {
   color: white;
   text-decoration: none;
   font-size: 1.4rem;
+}
+@media screen and (min-width: 1200px) {
+  .navLinks a {
+    font-size: 1.8rem;
+  }
 }
 
 .navLinks a:hover {
@@ -137,7 +153,17 @@ nav {
     font-size: 1.4rem;
   }
 }
+@media screen and (min-width: 1200px) {
+  .more p {
+    width: 68%;
+    margin-left: 16%;
+    font-size: 1.8rem;
+  }
+}
 
+main img {
+  border: 1px solid white;
+}
 main h1 {
   text-align: center;
   border-top: 1px solid #484e51;
@@ -169,6 +195,11 @@ main ul li h3 {
 main ul li div img {
   width: 60%;
 }
+@media screen and (min-width: 1200px) {
+  main ul li div img {
+    width: 62%;
+  }
+}
 main ul li .proText {
   background-color: #484e51;
   padding: 1em;
@@ -189,11 +220,15 @@ main ul li .proText {
     font-size: 1.4rem;
   }
 }
+@media screen and (min-width: 1200px) {
+  main ul li .proText {
+    width: 59%;
+    margin-left: 19%;
+    font-size: 1.6rem;
+  }
+}
 main ul li .proText a {
   color: #dddddd;
-}
-main img {
-  border: 1px solid white;
 }
 
 footer {
@@ -219,6 +254,12 @@ footer {
     font-size: 1.6rem;
   }
 }
+@media screen and (min-width: 1200px) {
+  footer {
+    height: 60vh;
+    font-size: 1.8rem;
+  }
+}
 footer .fas {
   color: white;
   font-size: 1.6rem;
@@ -231,6 +272,11 @@ footer .fas {
 @media screen and (min-width: 992px) {
   footer .fas {
     font-size: 2rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  footer .fas {
+    font-size: 2.2rem;
   }
 }
 footer .contactText {
@@ -261,6 +307,11 @@ footer .iconsCont .fab {
   }
 }
 @media screen and (min-width: 992px) {
+  footer .iconsCont .fab {
+    font-size: 2.2rem;
+  }
+}
+@media screen and (min-width: 1200px) {
   footer .iconsCont .fab {
     font-size: 2.2rem;
   }
