--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,6 +1,9 @@
 @use "mixins";
 
 main {
+  img {
+    border: 1px solid white;
+  }
   h1 {
     text-align: center;
     border-top: 1px solid rgb(72, 78, 81);
@@ -25,6 +28,9 @@ main {
       div {
         img {
           width: 60%;
+          @include mixins.desktop() {
+            width: 62%;
+          }
         }
       }
       .proText {
@@ -42,14 +48,15 @@ main {
           margin-left: 20%;
           font-size: 1.4rem;
         }
+        @include mixins.desktop() {
+          width: 59%;
+          margin-left: 19%;
+          font-size: 1.6rem;
+        }
         a {
           color: rgb(221, 221, 221);
         }
       }
     }
-  }
-
-  img {
-    border: 1px solid white;
   }
 }
