--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -60,3 +60,14 @@ main {
     }
   }
 }
+#home {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.darkmode {
+  background-color: black;
+  color: white;
+}
