--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,3 +11,15 @@ body {
   background-color: rgb(24, 26, 27);
   color: white;
 }
+
+section {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.darkMode {
+  background-color: black;
+  color: white;
+}
