--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,16 @@
+.lightheader .navLinks {
+  background-color: grey;
+}
+.lightheader header .hamburgerCont {
+  background-color: lightgray;
+}
+.lightheader header .hamburgerCont .nav {
+  background-color: black;
+}
+.lightheader .more {
+  background-color: white;
+}
+
 header {
   height: 110vh;
   display: flex;
@@ -161,6 +174,13 @@ nav {
   }
 }
 
+.lightMode .proText {
+  background-color: lightgray;
+}
+.lightMode .proText a {
+  color: darkslategray;
+}
+
 main img {
   border: 1px solid white;
 }
@@ -229,6 +249,16 @@ main ul li .proText {
 }
 main ul li .proText a {
   color: #dddddd;
+}
+
+.Lightfooter {
+  background-color: lightgray;
+}
+.Lightfooter .iconsCont a {
+  color: black;
+}
+.Lightfooter .fas {
+  color: black;
 }
 
 footer {
@@ -326,16 +356,9 @@ body {
   color: white;
 }
 
-section {
-  padding: 25px;
+.ligth {
   background-color: white;
   color: black;
-  font-size: 25px;
-}
-
-.darkMode {
-  background-color: black;
-  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
