--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,14 +12,7 @@ body {
   color: white;
 }
 
-section {
-  padding: 25px;
+.ligth {
   background-color: white;
   color: black;
-  font-size: 25px;
-}
-
-.darkMode {
-  background-color: black;
-  color: white;
 }
